apps/domain-exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: domain-exporter
spec:
  ports:
    - port: 80
      targetPort: domain-exporter
  selector:
    app.kubernetes.io/name: domain-exporter
